# floaty

./: README.md  pyproject.toml  requirements.txt
float_mcp/: config.py  demo.py  server.py
float_mcp/tools/: accounting.py  accounts.py  bills.py  cards.py  controls.py  org.py  payments.py  reimbursements.py  reports.py  transactions.py  users.py  vendors.py
float_mcp/utils/: float_client.py
